# policy_analyzer

./: .env  .gitignore  IMPLEMENTATION_DETAILS.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.txt  REFACTORING_SUMMARY.md  STATE_INTEGRATION.md  app.py  build_dataset1.py  pyproject.toml
data/: campaign_policies.csv  economic_data.csv  economic_data.xlsx  policy_events.csv  state_gdp_clean.csv
data/gdp_raw/: SAGDP11_AK_1998_2025.csv  SAGDP11_AL_1998_2025.csv  SAGDP11_AR_1998_2025.csv  SAGDP11_AZ_1998_2025.csv  SAGDP11_CA_1998_2025.csv  SAGDP11_CO_1998_2025.csv  SAGDP11_CT_1998_2025.csv  SAGDP11_DC_1998_2025.csv  SAGDP11_DE_1998_2025.csv  SAGDP11_FL_1998_2025.csv  SAGDP11_FWST_1998_2025.csv  SAGDP11_GA_1998_2025.csv  SAGDP11_GLAK_1998_2025.csv  SAGDP11_HI_1998_2025.csv  SAGDP11_IA_1998_2025.csv  SAGDP11_ID_1998_2025.csv  SAGDP11_IL_1998_2025.csv  SAGDP11_IN_1998_2025.csv  SAGDP11_KS_1998_2025.csv  SAGDP11_KY_1998_2025.csv  SAGDP11_LA_1998_2025.csv  SAGDP11_MA_1998_2025.csv  SAGDP11_MD_1998_2025.csv  SAGDP11_MEST_1998_2025.csv  (+546 more)
pipeline/: bea_client.py  bls_client.py  build_dataset.py  campaign_adapter.py  config.py  congress_ingest.py  features.py  govinfo_ingest.py  ingest_bea.py  normalize.py  openstates_client.py  openstates_ingest.py  policy_embeddings.py  policy_impact_linker.py  policy_ingest.py  policy_mapper.py  policy_matching.py  policy_normalizer.py  policy_schema.py  policy_score.py
scripts/: backtest.py  expand_corpus.py  ingest_all.py  ingest_cap_state.py  ingest_state_macro.py  migrate.py  seed_state_corpus.py
tests/: test_deterministic.py
(+7 files in other folders)
