[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelipol"
version = "1.0.0"
description = "Deterministic decision-support dashboard and U.S. legislative data ingestion pipeline for macroeconomic policy projections."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.22.0",
    "pyarrow>=10.0.0",
    "requests>=2.28.0",
    "plotly>=5.10.0",
    "openpyxl>=3.0.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.250"
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
